changed the container's and db names

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,6 +1,6 @@
 FROM "mysql:5.7"
 
-ENV MYSQL_DATABASE=astral
+ENV MYSQL_DATABASE=shortlinks
 ENV MYSQL_ROOT_PASSWORD=qwerty
 
 ADD init_schema.sql /docker-entrypoint-initdb.d
